--- a/generalStyles.css
+++ b/generalStyles.css
@@ -46,15 +46,17 @@ html {
 }
 
 .themeSwitcher .theme-switcher-buttons {
-    width: 24px;
+    width: 84px;
     padding: 4px;
     height: 8px;
+
 }
 
-.themeSwitcher .theme-switcher-buttons button {
-    width: 6px;
-    height: 6px;
+.themeSwitcher .theme-switcher-buttons span {
+    width: 60px;
+    height: 60px;
     border-radius: 100%;
+    color: #000;
 }
 
 
