--- a/generalStyles.css
+++ b/generalStyles.css
@@ -10,6 +10,12 @@ html {
     font-size:100%;
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+    background: none;
+}
+
 .container {
     position: absolute;
     left: 50%;
@@ -17,7 +23,6 @@ html {
     transform: translate(-50%, -50%);
     background:none;
     width: 260px;
-    background-color: chartreuse;
 }
 
 .header {
@@ -29,6 +34,7 @@ html {
 
 .header p {
     margin-top: 20px;
+    font-size: 1.2rem;
 }
 
 .theme {
@@ -39,7 +45,7 @@ html {
 .theme>span {
     margin-top: 16px;
     margin-right: 20px;
-    font-size: .4rem;
+    font-size: .5rem;
 }
 
 .themeSwitcher {
@@ -62,6 +68,7 @@ html {
     justify-content: space-around;
     border-radius: 8px;
     align-items: center;
+    padding: 0 .8px;
 }
 
 .themeSwitcher .theme-switcher-buttons div {
@@ -69,11 +76,12 @@ html {
     height: 9px;
     border-radius: 100%;
     background: #000;
+    cursor: pointer;
 }
 
 .result-board {
     background: rosybrown;
-    font-size: 1.1rem;
+    font-size: .9rem;
     display: flex;
     justify-content:right;
     align-items: center;
@@ -104,13 +112,14 @@ html {
 .numbers, .operators, .decimal-point, .functions {
     border-radius: 8px;
     border: none;
-    border-bottom: 2px solid;
+    border-bottom: 3px solid;
     width: 100%;
     height: 30px;
     font-size: 1.2rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .numbers .seven {
@@ -153,7 +162,7 @@ html {
     grid-area: reset;
 }
 
- .submit {
+.submit {
     grid-area: equals;
 }
 
