--- a/themeOneStyle.css
+++ b/themeOneStyle.css
@@ -18,8 +18,12 @@ body{
     background: none;
 }
 
-.result-board, .calculation-input-keys .calculationButtons {
+.result-board {
     background: hsl(224, 36%, 15%);
+}
+
+.calculation-input-keys .calculationButtons {
+    background:hsl(223, 31%, 20%);
 }
 
 .result-board h1 {
