--- a/themeTwoStyle.css
+++ b/themeTwoStyle.css
@@ -1,35 +1,39 @@
 body{
-    background:  hsl(222, 26%, 31%);
+    background:  hsl(0, 0%, 90%);
 }
 
 .header p, .themeSwitcher span, .theme>span {
-    color: #fff;
+    color: hsl(60, 10%, 19%);
 }
 
 .themeSwitcher .theme-switcher-buttons {
-    background:hsl(223, 31%, 20%);
+    background:hsl(0, 5%, 81%);
 }
 
-.theme-switcher-buttons div.btn1{
-    background: hsl(6, 63%, 50%);
+.theme-switcher-buttons div.btn2{
+    background:  hsl(25, 98%, 40%);
 }
 
-.theme-switcher-buttons div.btn2, .theme-switcher-buttons div.btn3 {
+.theme-switcher-buttons div.btn1, .theme-switcher-buttons div.btn3 {
     background: none;
 }
 
-.result-board, .calculation-input-keys .calculationButtons {
-    background: hsl(224, 36%, 15%);
+.result-board {
+    background: hsl(0, 0%, 93%);
+}
+
+.calculation-input-keys .calculationButtons {
+    background:hsl(0, 5%, 81%);
 }
 
 .result-board h1 {
-    color: #fff;
+    color: hsl(60, 10%, 19%);
 }
 
 .numbers, .operators, .decimal-point { 
-    background: hsl(30, 25%, 89%);
-    border-color:hsl(28, 16%, 65%) ;
-    color: hsl(221, 14%, 31%);
+    background: hsl(45, 7%, 89%);
+    border-color:hsl(35, 11%, 61%) ;
+    color: hsl(60, 10%, 19%);
 }
 
 .numbers:hover, .operators:hover, .decimal-point:hover {
@@ -37,21 +41,21 @@ body{
 } 
 
 .functions {
-    background: hsl(225, 21%, 49%);
-    border-color: hsl(224, 28%, 35%);
+    background: hsl(185, 42%, 37%);
+    border-color: hsl(185, 58%, 25%);
     color: #fff;
     transition: .4s;
 }
 
 .functions:hover {
-    background: hsl(225, 37%, 73%);
+    background: hsl(185, 56%, 57%);
 }
 
 .submit {
-    background: hsl(6, 63%, 50%);
-    border-color:  hsl(6, 70%, 34%) ;
+    background: hsl(25, 98%, 40%);
+    border-color:  hsl(25, 99%, 27%) ;
 }
 
 .submit:hover {
-    background: hsl(6, 100%, 74%);
+    background:  hsl(25, 100%, 62%);
 }
