--- a/generalStyles.css
+++ b/generalStyles.css
@@ -120,6 +120,7 @@ body {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    transition: .4s;
 }
 
 .numbers .seven {
