--- a/themeOneStyle.css
+++ b/themeOneStyle.css
@@ -59,3 +59,11 @@ body{
 .submit:hover {
     background: hsl(6, 100%, 74%);
 }
+
+.attribution {
+    color: #fff;
+}
+
+.attribution a {
+    color: hsl(6, 63%, 50%);
+}
